<resources>
    <string name="app_name">My Little Shop</string>
    <string name="detail_activity">DetailActivity</string>
    <string name="category_product_name">Item name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="unit_price">$</string>
    <string name="button_order">Order</string>
    <string name="button_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>



</resources>
